tests/cases/parser/literals/double_comma_in_function_call.stderr
error: expected an expression, however received a `,`
 --> $DIR/double_comma_in_function_call.hash:3:10
2 |   
3 |   l := f(a,,);
  |            ^ 
